tests/error/unknown_identifier.ca

testBlock = {

    print(a)
}

int = make_stack(testBlock)
int.run

assert(int.error_message == "Unknown identifier: a")


